external-secrets/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  labels:
    name: external-secrets
    pod-security.kubernetes.io/enforce: baseline
