external-secrets/12-bitwarden-cli-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-cli
  labels:
    app.kubernetes.io/name: bitwarden-cli
    app.kubernetes.io/instance: bitwarden-cli
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bitwarden-cli
    app.kubernetes.io/instance: bitwarden-cli
  ports:
    - name: http
      port: 8087
      targetPort: http
      protocol: TCP
